RESOLVED FIXED185993
iBooks: text can disappear/flash during finger drag highlight
https://bugs.webkit.org/show_bug.cgi?id=185993
Summary iBooks: text can disappear/flash during finger drag highlight
alan
Reported 2018-05-25 13:48:29 PDT
1. Open iBooks 2. Pick a book 3. Open Contents 4. Select a random chapter 5. Page through a few pages 6. Highlight some text by dragging finger 7. Go back to #3 until text starts disappearing
Attachments
Patch (3.70 KB, patch)
2018-05-25 14:04 PDT, alan
no flags
alan
Comment 1 2018-05-25 13:52:50 PDT
alan
Comment 2 2018-05-25 14:04:55 PDT
WebKit Commit Bot
Comment 3 2018-05-25 14:42:58 PDT
Comment on attachment 341324 [details] Patch Clearing flags on attachment: 341324 Committed r232206: <https://trac.webkit.org/changeset/232206>
WebKit Commit Bot
Comment 4 2018-05-25 14:42:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.