iBooks: text can disappear/flash during finger drag highlight https://bugs.webkit.org/show_bug.cgi?id=185993 <rdar://problem/34026943>

Reviewed by Simon Fraser.

Reuse existing tiles when override rect is fully covered by the active grid.
Also, recover dropped tiles if override rect forces us to create new ones.

Unable to create a reproducible test case.

* platform/ios/LegacyTileCache.h:
* platform/ios/LegacyTileCache.mm:
(WebCore::LegacyTileCache::setOverrideVisibleRect):
* platform/ios/LegacyTileLayer.mm:
(-[LegacyTileHostLayer renderInContext:]):


Canonical link: https://commits.webkit.org/201431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232206 268f45cc-cd09-0410-ab3c-d52691b4dbfc